--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,9 @@ body {
   background-color: #ebefea;
 }
 
+span.feed-category {
+  margin-left: 20px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
